style: fix readability issues and make page more dynamic

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,11 +30,37 @@ body {
   background-color: #3882F6;
   text-decoration: none;
   color: White;
-  font-size: 16px;
+  font-size: 1rem;
   text-align: center;
   margin-top: 10px;
   padding: 5px 20px;
   border-radius: 8px;
+  border: 2px solid #1F2937;
+}
+
+.signup:active{
+  opacity: 80%;
+  border: 2px solid gray;
+}
+
+/* Top Nav Bar */
+
+.topNavbar {
+  border-bottom: 2px solid white;
+  padding-bottom: 1vh;
+}
+
+.linkCont {
+  margin-left: 40%;
+  /* border: 2px solid red; */
+  
+}
+
+.hlinks {
+  display: flex;
+  padding: 0 5vw 0 0vw;
+  align-items: end;
+  
 }
 
 /*Nav Bar start*/
@@ -47,19 +73,18 @@ nav {
 
 nav h1{
   color: White;
-  font-size: 24px;
-  padding: 20px 0 0 0;
+  font-size: 1.5rem;
+  padding: 1rem 0 0 0;
 }
 
 nav ul {
   display: flex;
   list-style: none;
-  padding: 20px 0 0 670px;
 }
 
 nav a {
   color: #E5E7EB;
-  font-size: 18px;
+  font-size: 1.1rem ;
   text-decoration: none;
   padding-right: 30px;
 }
@@ -74,22 +99,24 @@ nav a {
 
 .sec1 h1 {
   color: white;
-  font-size: 36px;
-  width: 300px;
+  font-size: 2.25rem;
+  width: 20vw;
+  margin-bottom: 1vh;
 }
 .sec1 p {
   width: 500px;
   color: #E5E7EB;
+  padding: 0 0 1vh 0;
 }
 
 .pic1 {
   background-color: #767c85;
-  width: 400px;
-  height: 75px;
+  width: 30vw;
+  height: 10vh;
   margin-left: 200px;
-  padding: 75px 0 20px;
+  padding: 12vh 0 5vh;
   text-align: center;
-  font-size: 16px;
+  font-size: 1.25rem;
   color: #E5E7EB;
 }
 
@@ -101,7 +128,7 @@ nav a {
 
 .sec2 h1 {
   text-align: center;
-  font-size: 34px;
+  font-size: 2.1rem;
   padding: 40px 25px;
 }
 
@@ -124,7 +151,7 @@ figure {
 figcaption {
   margin-top: 160px;
   margin-left: 0;
-  font-size: 18px;
+  font-size: 1.25rem;
   font-weight: 500;
 }
 
@@ -136,8 +163,8 @@ figcaption {
 }
 
 .qt1 {
-  font-size: 30px;
-  padding: 0 350px 0 350px;
+  font-size: 2rem;
+  padding: 0 22vw;
   font-style: italic;
 }
 
@@ -169,14 +196,13 @@ figcaption {
 
 
 .action-p {
-  font-size: 24px;
+  font-size: 2rem;
   color: white;
   font-weight: bolder;
-
 }
 
 .normal-p {
-  font-size: 14px;
+  font-size: 1rem;
   color: white;
 }
 
@@ -185,26 +211,27 @@ figcaption {
   background-color: #3882F6;
   text-decoration: none;
   color: White;
-  font-size: 16px;
+  font-size: 1rem;
   padding: 5px 20px;
   margin: 10px 0 0 0;
   border-radius: 8px;
   border: 2px solid white;
 }
 
+.signup2:active {
+  opacity: 75%;
+  border: 2px solid gray;
+}
 
 /* Footer */
 
 footer {
   background-color: #1F2937;
   width: 100%;
-  height: 40px;
   text-align: center;
-
 }
-
 footer p{
-  padding-top: 10px;
+  margin: 1vh 0 2vh 0;
   color: white;
-  font-size: 16px;
+  font-size: 1rem;
 }
